Voxy/static/css/style.css
body {
    font-family: Arial, sans-serif;
    line-height: 1.6;
    margin: 0;
    padding: 0;
    overflow: hidden;
    
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center; 
    height: 10%;
    background-color: #1f1f1f;
    width: 100%;
}

#logo {
    border-radius: 50%;
    filter: saturate(2.2);
}

nav {
    display: flex;
    align-items: center;
}

nav ul {
    list-style-type: none;
    display: flex;
}

nav ul li {
    margin-right: 10px;
}

nav ul li a {
    color: white;
    text-decoration: none;
}

main {
    width: 100%;
    height: 100%;
}

.hero {
    top: 0%;
    background-color: #381C48;
    filter: saturate(2.2);
    padding: 2%;
    text-align: center;
}

.forum {
    padding: 20px;
}

.forum h2 {
    margin-bottom: 20px;
}

.forum ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.forum ul li {
    border-bottom: 1px solid #ddd;
    padding: 10px 0;
}

.forum ul li a {
    color: #333;
    text-decoration: none;
}

body.dark {
    color: #fff;
    background-color: #000;
    width: 100%;
}

body.dark nav ul li a {
    color: #fff;
}

footer{
    background-color: #1f1f1f;
    position: absolute;
    bottom: 0%;
    width: 100%;
  	height:5%;
    text-align: center;
    color: white;
}

/* Connection page */



.ring {
    position: absolute;
    width: 600px; /* Ajusté la taille des anneaux */
    height: 600px; /* Ajusté la taille des anneaux */
    display: flex;
    justify-content: center;
    align-items: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.ring i {
    position: absolute;
    inset: 0;
    border: 2px solid #fff;
    transition: 0.5s;
}

.ring i:nth-child(1) {
    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
    animation: animate 6s linear infinite;
}

.ring i:nth-child(2) {
    border-radius: 41% 44% 56% 59% / 38% 62% 63% 37%;
    animation: animate 4s linear infinite;
}

.ring i:nth-child(3) {
    border-radius: 41% 44% 55% 59% / 38% 62% 63% 37%;
    animation: animate 10s linear infinite;
}

.ring:hover i {
    border: 6px solid var(--clr);
    filter: drop-shadow(0 0 20px var(--clr));
}

.login {
    width: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 20px;
    background-color: rgba(0, 0, 0, 0.7); /* Fond du formulaire de login */
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
    z-index: 2; /* Mettez les formulaires au-dessus des anneaux */
    position: relative; /* Ajout de position relative */
}

.login h2 {
    font-size: 2em;
    color: #fff;
}



.login  input {
    width: calc(100% - 40px); /* Ajusté la largeur pour éviter le dépassement */
    padding: 12px 20px;
    background: transparent;
    border: 2px solid #fff;
    border-radius: 40px;
    font-size: 1.2em;
    color: #fff;
    box-shadow: none;
    outline: none;
}

.login input[type="submit"] {
    width: 100%;
    background: #0078ff;
    background: linear-gradient(45deg, #c235ff, #a372ff);
    border: none;
    cursor: pointer;
}

.login  input::placeholder {
    color: rgba(255, 255, 255, 0.75);
}

.login .links {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
}

.login .links a {
    color: #fff;
    text-decoration: none;
}

#container {
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: #23272A;
    display: flex;
    justify-content: center;
    align-items: center;  
    overflow: hidden;
}

.login {
    max-height: 60%; /* Set a maximum height for the login section */
    overflow-y: auto; /* Enable scrolling for the login section */
    position: fixed;
    display: inline-block;
    margin-top:20%;
    margin-bottom:20%;
}


@keyframes animate {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}


/* Login/signin buttons */
#login-form, #signup-form {
    position: relative; /* or position: static; */
    display: flex;
    flex-direction: column;
    gap: 10px;
    max-width: 300px;
    color:#ccc;
}

#login,
#signup {
    
    background-color: #000;
    color: #ccc;
    border: none;
    padding: 10px;
    cursor: pointer;
}

#signup {
    margin-top: 10px;
}

#login:hover,
#signup:hover {
    background-color: #1f1f1f;
}
.errorlist{
    color:#ccc;
}
/* Chatroom page */
.chatroom body {
    margin: 0;
    font-family: Arial, sans-serif;
    height: 100vh;
    display: flex;
    flex-direction: column;
    transition: background-color 0.3s, color 0.3s;
}

.chatroom .barre-haut {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    background-color: #23272A;
    color: white;
    transition: background-color 0.3s, color 0.3s;
}
.chatroom .barre-haut .boutons-haut {
    display: flex;
    align-items: center;
    margin-left: auto; 
}

.chatroom .barre-haut button,
#bouton-changement-theme {
    margin-left: 10px;
}

.chatroom .barre-haut button {
    background-color: #7289DA;
    color: white;
    border: none;
    border-radius: 5px;
    padding: 10px 15px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}

.chatroom .barre-haut button:hover {
    background-color: rgb(49, 49, 170);
}

.chatroom #bouton-parametre {
    padding: 10px;
}

.chatroom #bouton-parametre i {
    font-size: 20px;
}

.chatroom #bouton-aide {
    padding: 10px;
}

.chatroom #bouton-aide i {
    font-size: 20px;
}
.chatroom .barre-haut {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    background-color: #23272A;
    color: white;
    height: 60px; 
    transition: background-color 0.3s, color 0.3s;
}

.chatroom .box-logo {
    display: flex;
    align-items: center;
}

.chatroom .box-logo img {
    max-height: 150px; 
    width: auto; 
    margin-right: 10px; 
}

.chatroom .box-logo p {
    margin: 0;
}
.chatroom #bouton-changement-theme {
    background-color: #7289DA;
    color: white;
    border: none;
    border-radius: 5px;
    padding: 10px 15px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}

.chatroom .theme-sombre #bouton-changement-theme {
    background-color: #4E5D94;
}

.chatroom .barre-haut .boutons-haut {
    display: flex;
    align-items: center;
}

.chatroom #bouton-changement-theme,
.chatroom #bouton-parametre,
.chatroom #bouton-aide, 
.chatroom #bouton-profil
{
    width: 30px; 
    height: 30px; 
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 16px; 
}


.chatroom .section-salons {
    display: flex;
    flex: 1;
    color: white;
    background-color: #2C2F33;
    transition: background-color 0.3s, color 0.3s;
}

.chatroom .salons-textuel, .chatroom .liste-utilisateurs {
    flex: 0.2;
    padding: 20px;
    border-right: 2px solid #23272A;
    overflow-y: auto;
    max-height: 100%;
}

.chatroom .section-chat {
    flex: 0.6;
    padding: 20px;
    border-right: 2px solid #23272A;
    display: flex;
    flex-direction: column;
}

.chatroom .message-serveur {
    flex: 1;
    overflow-y: auto;
    padding: 10px;
    margin-bottom: 10px;
    border-bottom: 2px solid #23272A;
    background-color: #23272A;
    border-radius: 10px;
    max-height: 100%;
}

.chatroom .message-serveur p {
    color: #7289DA;
    margin: 5px 0;
}

.chatroom .ajouter-salon {
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 2px solid #23272A;
    padding: 10px;
    border-radius: 5px;
    margin: 0 auto;
    width: 50%;
}

.chatroom .ajouter-salon button {
    padding: 10px 15px;
    color: white;
    background-color: #7289DA;
    border: none;
    border-radius: 50%;
    font-size: 20px;
    margin-right: 10px;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}

.chatroom .ajouter-salon-titre {
    color: white;
}

.chatroom .encadre-salon {
    flex-grow: 1;
    border-radius: 10px;
    background-color: #23272A;
    padding: 20px;
    margin-top: 20px;
    max-height: 75vh;
    overflow-y: auto;
}

.chatroom .saisie-message {
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 2px solid #23272A;
    padding: 10px;
    width: 50%;
    margin: 0 auto;
}

.chatroom .saisie-message input {
    flex: 1;
    margin-right: 10px;
    padding: 5px;
    background-color: #23272A;
    color: white;
}

.chatroom h2 {
    color: #7289DA;
    margin: 0;
}

.chatroom .section-titre, .chatroom .liste-utilisateurs .section-titre {
    background-color: #23272A;
    padding: 10px;
    border-radius: 5px;
    margin-bottom: 20px;
    text-align: center;
}

.chatroom .barre-bas {
    background-color: #23272A;
    color: white;
    padding: 20px;
}

.chatroom .pied-page {
    text-align: center;
}

.chatroom .pied-page p {
    margin: 0;
    font-size: 14px;
}

.chatroom .barre-haut button:hover, .barre-haut #bouton-parametre:hover,.chatroom  .barre-haut #bouton-aide:hover, 
.chatroom #bouton-changement-theme:hover,
.chatroom .ajouter-salon button:hover {
    background-color: rgb(49, 49, 170);
}
/* login */

